# mdlyricgetter

./: Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md
src/: cli.rs  config.rs  main.rs  metadata.rs  report.rs  scanner.rs  writer.rs
tests/: integration.rs
